pkg/front_end/testcases/patterns/non_pattern_case_among_pattern_cases_in_switch.dart.weak.expect
library /*isNonNullableByDefault*/;
//
// Problems in library:
//
// pkg/front_end/testcases/patterns/non_pattern_case_among_pattern_cases_in_switch.dart:10:14: Error: Undefined name 'a'.
//       return a; // Error.
//              ^
//
import self as self;
import "dart:core" as core;

static method test(dynamic x) → dynamic {
  #L1:
  {
    final synthesized dynamic #0#0 = x;
    {
      lowered final dynamic a#case#0;
      lowered final dynamic a#case#1;
      if((let final dynamic #t1 = a#case#0 = #0#0 in true) && a#case#0{dynamic}.>(0) as{TypeError,ForNonNullableByDefault} core::bool || #C1 =={core::num::==}{(core::Object) → core::bool} #0#0 || (let final dynamic #t2 = a#case#1 = #0#0 in true)) {
        {
          return invalid-expression "pkg/front_end/testcases/patterns/non_pattern_case_among_pattern_cases_in_switch.dart:10:14: Error: Undefined name 'a'.
      return a; // Error.
             ^";
        }
      }
    }
    {
      {
        {
          return null;
        }
      }
    }
  }
}

constants  {
  #C1 = 0
}
